<resources>
    <string name="app_name">GeoUnderground</string>
    <string name="choose_subscription">Choose Subscription</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error">Error</string>
    <string name="title_activity_choose_subscription">ChooseSubscriptionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="layer_visible_label">visible</string>
    <string name="title_activity_folder_documents">FolderDocumentsActivity</string>
    <string name="map_menu_base_map">Base Map</string>
    <string name="map_menu_full_screen">Full Screen</string>
    <string name="account_first_name">First Name</string>
    <string name="account_last_name">Last Name</string>
    <string name="account_email">Email</string>
    <string name="account_cell_phone">Cell Phone</string>
    <string name="account_office_phone">Office Phone</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_layer">Layer Activity</string>
    <string name="documents_name">Name</string>
    <string name="files_label">Files</string>
    <string name="folder_label">Folders</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="auth_token">auth-token</string>
    <string name="documents_section">Documents</string>
    <string name="folders_section">Folders</string>
    <string name="layers_section">Layers</string>
    <string name="general_save">Save</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="done">Done</string>
    <string name="select_map_style">Select a Style</string>
    <string name="impersonate">Impersonate</string>
    <string name="download_file">Download File</string>
    <string name="loading_dots">Loading…</string>
    <string name="logout">Logout</string>
    <string name="title_activity_folder_detail">FolderDetailActivity</string>
    <string name="title_activity_document_detail">DocumentDetailActivity</string>
    <string name="title_activity_layer_detail">LayerDetailActivity</string>
    <string name="library_dialog_title">Library Actions</string>
    <string name="layer_dialog_title">Layer Actions</string>
    <string name="folder">Folder</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_layer">Layer</string>
    <string name="document">Document</string>
    <string name="add_document">Add Document</string>
    <string name="add_image">Image</string>
    <string name="title_activity_subscription_selector">SubscriptionSelectorActivity</string>
    <string name="standard_subscription_section">Standard</string>
    <string name="tutorial_clone_subscription_section">Tutorial Clone</string>
    <string name="demo_clone_subscription_section">Demo Clone</string>
    <string name="default_subscription_section">Default</string>
    <string name="ssp_subscription_section">SSP</string>
    <string name="plugin_owners_section">Plugin Owners</string>
    <string name="create_folder">Create Folder</string>
    <string name="create">Create</string>
    <string name="create_layer">Create Layer</string>
    <string name="layer_polygon">Polygon</string>
    <string name="layer_line">Line</string>
    <string name="layer_point">Point</string>
    <string name="folder_name_hint">Folder Name</string>
    <string name="layer_name_hint">Layer Name</string>
    <string name="delete_layer">Delete Layer</string>
    <string name="delete">Delete</string>
    <string name="title_activity_select_subscription">Select a Subscription</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="are_you_sure">Are you sure that you want to delete</string>
    <string name="are_you_sure_title">Are You Sure?</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_document">Upload Document</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_existing">Choose Existing</string>
    <string name="upload_existing">Upload Existing</string>
    <string name="error_external_storage">Error External Storage</string>
    <string name="save">Save</string>
    <string name="sublayers">Sublayers</string>
    <string name="account_title">Account</string>
    <string name="layertree_title">Layer Tree</string>
    <string name="show_layers">Show Layers</string>
    <string name="library_fragment_title">Library Tree</string>
    <string name="layer_tree">Layer Tree</string>
    <string name="point_query">Point Query</string>
    <string name="box_query">Box Query</string>
    <string name="quicksearch">Quick Search</string>
    <string name="search">Search</string>
    <string name="no_results_found">No Results Found</string>
    <string name="legend">Legend</string>
    <string name="sublayers_legend">Sublayers</string>
    <string name="bookmark">Bookmarks</string>
    <string name="add_bookmark">Add a Bookmark</string>
    <string name="close">Close</string>
    <string name="bookmarkname">Bookmark Name</string>
    <string name="geoundergroundSubscription">Subscription</string>
    <string name="depictionstyle">Style</string>
    <string name="attribute_layout">Attribute Layout</string>
    <string name="details">Details</string>
    <string name="visible">Visible</string>
    <string name="file_size">File Size</string>
    <string name="upload_time">Upload Time</string>
    <string name="file_details">File Details</string>
    <string name="permissions">Permissions</string>
    <string name="last_updated_date">Last Updated</string>
    <string name="updated_by_user">Last  Updated By</string>
    <string name="folder_actions">Folder Actions</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="rename">Rename</string>
    <string name="edit_style">Edit Style</string>
    <string name="edit_filter">Edit Filters</string>
    <string name="move">Move</string>
    <string name="edit_sublayer">Edit Sublayer</string>
    <string name="access_level">Access Level</string>
    <string name="shape_type">Shape Type</string>
    <string name="feature_count">Feature Count</string>
    <string name="layer_actions">Layer Actions</string>
    <string name="finish">Finish</string>
    <string name="move_document">Move Document</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="defaultValue">Default Value</string>
    <string name="query">Box/Point Query</string>
    <string name="query_results">Query Results</string>
    <string name="clear_bookmarks">Clear Bookmarks</string>
    <string name="geounderground">GeoUnderground</string>
    <string name="portal">Portal</string>
    <string name="hidden">Hidden</string>
    <string name="attribute_name">Attribute Name</string>
    <string name="add_sublayer">Add Sublayer</string>
    <string name="library_tree_screen">Library Tree Screen</string>
    <string name="ui">UI</string>
    <string name="clicked">Clicked</string>
    <string name="success">Success</string>
    <string name="column_type_null">Type Should contain a value</string>
    <string name="layer_folder_detail_screen">Layer Folder Detail Screen</string>
    <string name="entering_bookmark_name">Entering Bookmark Name Panel</string>
    <string name="GoogleSignIn">Google Signin button clicked</string>
    <string name="loginAttempt">Login Attempt</string>
    <string name="name_invalid">Name must have a value</string>
    <string name="boolean_type_invalid">Default Value must be true or false</string>
    <string name="hideLayerCheckBox">Hide Layer Checkbox</string>
    <string name="showLayerCheckBox">Show Layer Checkbox</string>
    <string name="add">Add</string>
    <string name="base_map">Base Map</string>
    <string name="full_screen">Full Screen</string>
    <string name="toggle">Toggle</string>
    <string name="created">Created</string>
    <string name="created_by">Created By</string>
    <string name="folder_count">Folder Count</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="rename_document">Rename Document</string>
    <string name="delete_document">Delete Document</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="style_layer">Edit Layer Styles</string>
    <string name="rename_layer">Rename Layer</string>
    <string name="rename_sublayer">Rename Sublayer</string>
    <string name="delete_sublayer">Delete Sublayer</string>
    <string name="view_sublayers">View Sublayers</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="document_icon">Document Icon</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="folder_detail_icon">Folder Detail Icon</string>
    <string name="folder_permissions_icon">Folder Permissions Icon</string>
    <string name="layer_detail_icon">Layer Detail Icon</string>
    <string name="or">OR</string>
    <string name="powered_by">Powered by Geospatial Corporation</string>
    <string name="sign_up_invitation">Don\'t have an account? <a href="https://www.geounderground.com/register">Sign Up.</a></string>
    <string name="full_screen_mode">Fullscreen mode initialized</string>
    <string name="query_mode">Query Mode Initialized</string>
    <string name="quicksearch_mode">Quick Search opened</string>
    <string name="map_screen">Map Screen</string>
    <string name="current_location">Get Current Location Clicked</string>
    <string name="change_basemap">Change Basemap clicked</string>
    <string name="geometryIV">Geometry Type Image View</string>
    <string name="add_feature_window_document">Add Document</string>
    <string name="GeoUndergroundSignIn">GeoUnderground Sign In Button Clicked</string>
    <string name="map_window_title">Map Window Title</string>
    <string name="add_mapfeature_document">Add Document to Feature</string>
    <string name="document_detail_screen">Document Detail Screen</string>
    <string name="show_document_actions">Show Document Actions Window</string>
    <string name="sublayers_tab_screen">Sublayers Tab Screen</string>
    <string name="show_layer_actions">Show Layer Actions</string>
    <string name="layer_detail_tab_screen">Layer Details Tab</string>
    <string name="folder_permission_click">the user clicked the folder permissions button</string>
    <string name="forgotPassword"><a href="https://www.geounderground.com/ForgotPassword">Forgot Password?</a></string>
    <string name="remember_me">Remember Me</string>
    <string name="library">Library</string>
    <string name="account">Account</string>
    <string name="select_edit_task">Select A Task</string>
    <string name="create_line">Create Line</string>
    <string name="remove_line">Remove Line</string>
</resources>