<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_show_layers"
          android:title="@string/show_layers"
          android:icon="@drawable/ic_layers_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_library"
          android:title="@string/library"
          android:icon="@drawable/ic_book_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_account"
          android:title="@string/account"
          android:icon="@drawable/ic_account_circle_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_logout"
          android:title="@string/account"
          android:icon="@drawable/ic_logout_white_24dp"
          app:showAsAction="ifRoom"/>
</menu>