<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add Attribute"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle"
        android:id="@+id/toggle"
        android:layout_marginEnd="31dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameET"
        android:hint="@string/attribute_name"
        android:singleLine="true"
        android:layout_below="@+id/toggle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/columnTypes"
        android:layout_below="@+id/nameET"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/defaultValue"
        android:ems="10"
        android:id="@+id/defaultValueET"
        android:singleLine="true"
        android:layout_below="@+id/columnTypes"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:layout_below="@+id/defaultValueET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden"
        android:id="@+id/isHiddenCB"
        android:layout_below="@+id/defaultValueET"
        android:layout_alignParentStart="true"
        android:checked="false"/>

</RelativeLayout>