<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/login_content_frame"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/body_bkg"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="32dp"
                tools:context="com.geospatialcorporation.android.geomobile.ui.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="500dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_full_color_logo_200"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView8"
                android:layout_below="@+id/textView8"
                android:gravity="center_horizontal"
                android:text="@string/powered_by"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text"/>

            <LinearLayout
                android:id="@+id/plus_sign_out_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:weightSum="2">

                <Button
                    android:id="@+id/plus_sign_out_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_sign_out"/>

                <Button
                    android:id="@+id/plus_disconnect_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_disconnect"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/body_bkg"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nestedScrollingEnabled="false"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/accent_blue"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/rememberCB"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/plus_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sign_up_invitation"
                android:id="@+id/signUpLink"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColorLink="@color/primary_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forgotPassword"
                android:id="@+id/forgotPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColorLink="@color/primary_text"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>