<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/renameSection"
            style="@style/actionDialog_linearLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/renameImageView"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_rename_box_black_24dp"
                android:contentDescription="@string/rename_folder"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/actionDialog_textView"
                android:text="@string/rename"
                android:id="@+id/renameTV"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/deleteSection"
            style="@style/actionDialog_linearLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteImageView"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_folder_remove_black_24dp"
                android:contentDescription="@string/delete_folder"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/actionDialog_textView"
                android:text="@string/delete"
                android:id="@+id/deleteTV"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>