<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/attributeName"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/columnTypes"
        android:layout_below="@+id/attributeName"
        android:layout_marginTop="34dp"
        android:layout_alignStart="@+id/attributeName"
        android:layout_alignEnd="@+id/attributeName"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/defaultValue"
        android:id="@+id/defaultValue"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/columnTypes"
        android:layout_alignStart="@+id/columnTypes"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden"
        android:id="@+id/hidden"
        android:layout_below="@+id/defaultValue"
        android:layout_alignEnd="@+id/defaultValue"/>

</RelativeLayout>