<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select_edit_task"
        android:id="@+id/task"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/task"
        android:paddingTop="4dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_line"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:src="@drawable/ic_window_minimize_white_36dp"
            android:contentDescription="@string/create_line"
            android:background="@color/transparent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove_line"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:src="@drawable/ic_eraser_white_36dp"
            android:contentDescription="@string/remove_line"
            android:background="@color/transparent"/>

    </LinearLayout>



</RelativeLayout>